--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -99,6 +99,8 @@ body::after {
 }
 
 .content {
+    position: relative;
+    min-height: 100vh;
     width: 70%;
     height: auto;
     margin: auto;
@@ -108,6 +110,9 @@ body::after {
     
 }
 .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     @include font-normal;
     text-align: center;
     font-size: $font-size-tiny;
@@ -240,15 +245,38 @@ body::after {
     border: none;
 }
 
-.search__btn {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    font-family: $font-family;
+.search__component--basic-controls, .search__component--additional-controls {
+    display: flex;
 }
 
-.search__btn:hover {
+.search__btn, .clear__filters--btn, .hide-filters-btn {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid lighten($bgcolor, 15%);
+    font-family: $font-family;
+    background: transparent;
+    color: #eee;
+    position: relative;
+}
+.clear__filters--btn {
+    margin-left: 10px;
+    padding: 0 25px 0 10px;
+}
+
+.hide-filters-btn {
+margin-left: 10px;
+}
+
+.search__btn:hover, .clear__filters--btn:hover, .hide-filters-btn:hover {
     cursor: pointer;
+}
+
+.clear__filters--btn::after {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    content: url('../images/icons/filter-svgrepo-com.svg');
+    margin-left: 2.5px;
 }
 
 
@@ -257,6 +285,7 @@ body::after {
 .filters {
     background-color: lighten($bgcolor, 3.5%);
     display: flex;
+    flex-direction: column;
     color: $font-color-default;
     font-family: $font-family;
     margin-bottom: 50px;
@@ -266,13 +295,75 @@ body::after {
     padding-top: 10px;
 }
 
+.filters__tabs {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    font-size: 24px;
+    width: 100%;
+    text-align: center;
+}
+
+.filters__tabs:hover {
+    cursor: pointer;
+}
+
+.filters__tab--chests, .filters__tab--dungeons, .filters__tab--gatheringspots {
+    position: relative;
+    padding: 20px;
+    width: 100%;
+    color: lighten($bgcolor, 25%);
+    letter-spacing: 0.75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.filters__tab--chests, .filters__tab--gatheringspots {
+    border: 2px solid lighten($bgcolor, 15%);
+}
+
+.filters__tab--dungeons {
+    border-top: 2px solid lighten($bgcolor, 15%);
+    border-bottom: 2px solid lighten($bgcolor, 15%);;
+}
+
+.filters__options {
+    display: flex;
+    min-height: 380px;
+}
+
+.filters__options p {
+    padding: 0 0 10px 0;
+}
+
+.category-name, .tab-exclamation {
+    position: relative;
+}
+
+.category-exclamation::after, .tab-exclamation::after {
+    content: url('../images/icons/exclamation-mark-svgrepo-com.svg');
+    width: 20px;
+    height: 20px;
+    position: absolute;
+}
+
+.category-exclamation::after {
+    top: -10px;
+}
+
+.tab-exclamation::after {
+    right: 5px;
+    top: 5px;
+}
+
 
 .filters__chests, .filters__dungeons, .filters__gatheringspots {
-    width: 30%;
-    margin: 0 auto;
-    text-align: center;
+    min-width: 100%;
+    padding-top: 20px;
     display: flex;
-    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
 }
 
 .filters__chests--chest {
@@ -281,7 +372,16 @@ body::after {
     align-items: flex-end;
     justify-content: center;
     margin-bottom: 12.5px;
+
     // margin: auto;
+}
+
+.filters__chests--green, .filters__chests--blue, .filters__chests--gold, .filters__dungeons--holder {
+    width: 33.3%;
+}
+
+.filters__gathering-spots--leather, .filters__gathering-spots--iron, .filters__gathering-spots--stone, .filters__gathering-spots--wood, .filters__gathering-spots--flux {
+    width: 20%;
 }
 
 
@@ -363,17 +463,70 @@ label[for='green-chest-checkbox'] img, label[for='blue-chest-checkbox'] img, lab
 
 p[class*='error'] {
     color: red;
+};
+
+.covered {
+    display: none;
 }
 
+.show {
+    opacity: 1;
+}
+
+.show-animated {
+    opacity: 1;
+    overflow: hidden;
+    animation: slide-out 1s ease forwards;
+}
+
+.covered-animated {
+    max-height: 0;
+    overflow: hidden;
+    animation: slide-in 1s ease forwards;
+}
+
+
+.active {
+    background:lighten($bgcolor, 7.5%);
+}
+
+@keyframes slide-in {
+    from {max-height: 2200px;}
+    to {max-height: 0px;}
+}
+
+@keyframes slide-out {
+    from {max-height: 0px;}
+    to {max-height: 2200px;}
+}
 
 
 
 .result {
     @include font-headline;
     max-width: 360px;
-    margin: 10px 30px;
+    margin: 10px 30px 40px;
     background-color: lighten($bgcolor, 3.5%);
     border-radius: 15px;
+}
+
+.results-not-found {
+    position: relative;
+    color: #fff;
+    font-family: $font-family;
+    text-align: center;
+    padding-top: 30px;
+    width: 100%;
+}
+
+.results-not-found::after {
+    position: absolute;
+    content: url('../images/icons/sad-emoticon.svg');
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    top: 120px;
 }
 
 
@@ -506,7 +659,22 @@ color: $gathering-spot-color;
         display: flex;
         flex-direction: column;
     }
-    .filters__chests, .filters__dungeons {
+    .filters__chests {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .filters__dungeons  {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .filters__gatheringspots {
+        flex-direction: column;
+        align-items: center;
+    }
+    .filters__gathering-spots--leather, .filters__gathering-spots--iron, .filters__gathering-spots--stone, .filters__gathering-spots--wood, .filters__gathering-spots--flux {
         width: 100%;
     }
     .filters__chests--gold, .filters__dungeons--wrapper {
@@ -515,6 +683,33 @@ color: $gathering-spot-color;
     }
 }
 
-@media (max-width: 540px) {
-  //placehodler
+
+@media(max-width: $md-breakpoint) {
+    .search__component {
+        flex-direction: column;
+    }
+    .search__component input {
+        width: 75%;
+    }
+    .search__component--additional-controls {
+        width: 95%;
+        margin: 15px auto 0;
+    }
+    .search__component--additional-controls button {
+        width: 50%;
+    }
+}
+
+
+@media (max-width: $sm-breakpoint) {
+    .legend .items {
+    flex-direction: column;
+    align-items: center;
+    }
+    .filters__tabs {
+        font-size: 18px;
+    }
+    .filters__tab--chests, .filters__tab--dungeons, .filters__tab--gatheringspots {
+        padding: 10px;
+    }
 }
