--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -16,7 +16,8 @@ $font-family: 'Barlow', sans-serif;
 //custom breakpoints
 $ctar-lg-breakpoint: 1800px;
 $lg-breakpoint: 992px;
-
+$sm-breakpoint: 576px;
+$md-breakpoint: 768px;
 //spacing unit
 $spacing-unit: 10px;
 
