minor PROD hotfixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,10 +255,10 @@ body::after {
   position: absolute;
   top: 0px;
   right: 0px;
-  width: 30vh;
+  width: 50%;
   height: 100vh;
   background: rgb(17, 3, 17);
-  z-index: 3;
+  z-index: 10;
   color: black;
   display: grid;
   justify-items: center;
@@ -572,12 +572,21 @@ body::after {
     font-size: 14px;
   }
 }
-@media (max-width: 900px) {
+@media (max-width: 992px) {
   .content {
     width: 100%;
   }
-  .content .navbar .navbar__wrapper {
-    width: 100%;
+  .content .navbar {
+    display: none;
+  }
+  .content .navbar-mobile {
+    display: flex;
+  }
+  .content__banner .banner__info .banner__headline {
+    font-size: 30px;
+  }
+  .content__banner .banner__info .banner__container {
+    width: 60%;
   }
   .content__banner {
     display: flex;
