--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -647,9 +647,6 @@ color: $gathering-spot-color;
   }
 
 
-// @media (max-width: 1200px) {
- 
-//   }
 
 @media (max-width: $lg-breakpoint) {
     .content {
@@ -680,6 +677,14 @@ color: $gathering-spot-color;
     .filters__chests--gold, .filters__dungeons--wrapper {
         border-bottom: 1px solid lighten($bgcolor, 17.5%);
         padding-bottom: 10px;
+    }
+    .covered {
+        display: none;
+    }
+    .search__results 
+    {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
