add height for results not found p

--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -517,6 +517,7 @@ p[class*='error'] {
     text-align: center;
     padding-top: 30px;
     width: 100%;
+    height: 300px;
 }
 
 .results-not-found::after {
