--- a/styles/checkTheAvaRoad.scss
+++ b/styles/checkTheAvaRoad.scss
@@ -717,4 +717,7 @@ color: $gathering-spot-color;
     .filters__tab--chests, .filters__tab--dungeons, .filters__tab--gatheringspots {
         padding: 10px;
     }
+    .result {
+        margin: 10px 0 40px;
+    }
 }
