--- a/styles/styles.css
+++ b/styles/styles.css
@@ -268,6 +268,9 @@ body::after {
   transform: translateX(100%);
   transition: all 0.5s ease-in;
 }
+.content .navbar-mobile .navbar__wrapper .navbar-open li {
+  text-align: center;
+}
 .content .navbar-mobile .navbar__wrapper .navbar-open .navbar__link {
   font-family: "Barlow", sans-serif;
   font-weight: 100;
